--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,6 @@ html
     title= title
   body
     h1= message
-    img(src="хттп://ссылка.на/картинку.жпг", alt="Текст если нет картинки")
+    img(src="http://www.kaktusenok.com/img/animals/9/utkonos.jpg", alt="Текст если нет картинки")
     h2= 'И тут текст'
     a(href="./page2") Ссылка на 2 страницу
