--- a/views/index.pug
+++ b/views/index.pug
@@ -5,4 +5,4 @@ html
     h1= message
     img(src="http://www.kaktusenok.com/img/animals/9/utkonos.jpg", alt="Текст если нет картинки")
     h2= 'И тут текст'
-    a(href="./page2") Ссылка на 2 страницу
+    a(href="./") Ссылка на 2 страницу
