--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,6 @@ html
     title= title
   body
     h1= message
-    img(src="http://www.kaktusenok.com/img/animals/9/utkonos.jpg", alt="Текст если нет картинки")
+    img(src="https://avatars.mds.yandex.net/get-zen_doc/1602847/pub_5c9f3a2aec888400b2bcd8a0_5c9f522ed677b400b3b86833/scale_2400", alt="Текст если нет картинки")
     h2= 'И тут текст'
     a(href="/") Ссылка на 2 страницу
